--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <form action="#" method="post">
         <div class="contact">
         <label><h3>お問い合わせ</h3></label>
-        <p>お名前（必須）：<br>
+        <p>お名前<br>
         <input type="text" name="name"></p>
-        <p>メールアドレス：<br>
+        <p>メールアドレス<br>
         <input type="text" name="mail"></p>
     </div>
     </form>
