--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 
 <div class="globalNav">
     <ul>
-        <li>インテリアコーディネート</li>
-        <li>事業内容</li>
-        <li>サービス</li>
-        <li>採用情報</li>
+        <li>ご相談</li>
+        <li>インテリアコーディネート事例</li>
+        <li>家具の購入</li>
         <li>会社情報</li>
     </ul>
 </div>
