--- a/index.html
+++ b/index.html
@@ -81,10 +81,7 @@
           <li><a href="#">クローゼットの収納法を伝授</a></li>
         </ul>
       </nav>
-      <p>
-        <a href="#"><img src="images/new.jpg" alt="バナー" width="300" height="100"></a>
-        
-      </p>
+      <button class="kadomaru">無料カタログ請求 ▶ </button>
     </aside>
   </div>
     <footer>
